--- a/resources/language/resource.language.fr_fr/strings.po
+++ b/resources/language/resource.language.fr_fr/strings.po
@@ -8,89 +8,94 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Language-Team: English\n"
+"Language-Team: French\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
+"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#30000"
 msgid "Global"
-msgstr ""
+msgstr "Global"
 
 msgctxt "#30001"
-msgid "Une Erreur est survenue, Veuillez réessayer..."
-msgstr ""
+msgid "Something went wrong, Try again..."
+msgstr "Une Erreur est survenue, Veuillez réessayer..."
 
 msgctxt "#30002"
-msgid "Qualité Préférée"
-msgstr ""
+msgid "Preferred Quality"
+msgstr "Qualité Préférée"
 
 msgctxt "#40001"
-msgid "Direct"
-msgstr ""
+msgid "Live TV"
+msgstr "Direct"
 
 msgctxt "#40002"
-msgid "Série TV"
-msgstr ""
+msgid "TV Shows"
+msgstr "Série TV"
 
 msgctxt "#40003"
-msgid "Films"
-msgstr ""
+msgid "Movies"
+msgstr "Films"
 
 msgctxt "#40004"
-msgid "Jeunesse"
-msgstr ""
+msgid "Kids"
+msgstr "Jeunesse"
 
 msgctxt "#40005"
-msgid "Documentaires"
-msgstr ""
+msgid "Documentaries"
+msgstr "Documentaires"
 
 msgctxt "#40006"
 msgid "Magazines"
-msgstr ""
+msgstr "Magazines"
 
 msgctxt "#40007"
-msgid "Recherche"
-msgstr ""
+msgid "Search"
+msgstr "Recherche"
 
 msgctxt "#40008"
 msgid "Series"
-msgstr ""
+msgstr "Series"
 
 msgctxt "#40009"
-msgid "Films"
-msgstr ""
+msgid "Favorites"
+msgstr "Favorits"
 
 msgctxt "#40010"
-msgid "Veuillez configurez votre compte ..."
-msgstr ""
+msgid "Please setup your account ..."
+msgstr "Veuillez configurez votre compte ..."
 
 msgctxt "#40011"
-msgid "Erreur d'authentification ..."
-msgstr ""
+msgid "Login Failed ..."
+msgstr "Authentification échouée..."
+
 
 msgctxt "#40012"
-msgid "Suivant"
-msgstr ""
+msgid "Next"
+msgstr "Suivant"
 
 msgctxt "#40013"
-msgid "Saison"
-msgstr ""
+msgid "Season"
+msgstr "Saison"
+
+msgctxt "#40014"
+msgid "No Result found"
+msgstr "Aucun Résultat Trouvé"
 
 msgctxt "#30040"
-msgid "Compte"
-msgstr ""
+msgid "Account"
+msgstr "Compte"
 
 msgctxt "#30041"
-msgid "Opérateur"
-msgstr ""
+msgid "Provider"
+msgstr "Opérateur"
 
 msgctxt "#30042"
-msgid "Nom D'Utilisateur"
-msgstr ""
+msgid "USERNAME"
+msgstr "Nom D'Utilisateur"
 
 msgctxt "#30043"
-msgid "Mot de Passe"
-msgstr ""
+msgid "PASSWORD"
+msgstr "Mot de Passe"
