modified:   resources/language/resource.language.en_gb/strings.po 	modified:   resources/language/resource.language.fr_fr/strings.po

--- a/resources/language/resource.language.fr_fr/strings.po
+++ b/resources/language/resource.language.fr_fr/strings.po
@@ -84,6 +84,14 @@ msgctxt "#40014"
 msgid "No Result found"
 msgstr "Aucun Résultat Trouvé"
 
+msgctxt "#40015"
+msgid "Add to OCS favorites"
+msgstr "Ajouter aux Favorits OCS"
+
+msgctxt "#40016"
+msgid "Remove from OCS favorites"
+msgstr "Supprimer des favorits OCS"
+
 msgctxt "#30040"
 msgid "Account"
 msgstr "Compte"
