--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -83,6 +83,14 @@ msgctxt "#40014"
 msgid "No Result found"
 msgstr ""
 
+msgctxt "#40015"
+msgid "Add to OCS favorites"
+msgstr ""
+
+msgctxt "#40016"
+msgid "Remove from OCS favorites"
+msgstr ""
+
 msgctxt "#30040"
 msgid "Account"
 msgstr ""
